# chatai

./: .gitignore
chatai-ui/: bun.lockb  package-lock.json  package.json  tailwind.config.ts
chatai-ui/src/: types.ts
chatai-ui/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
chatai-ui/src/app/api/chat/: route.ts
chatai-ui/src/app/canvas/: page.tsx
chatai-ui/src/app/chat/: page.tsx
chatai-ui/src/app/pages/: index.tsx
chatai-ui/src/components/: ApiStatusIndicator.tsx  ChatMessage.tsx  CodeBlock.tsx  Footer.tsx  Navbar.tsx
chatai-ui/src/components/canvas/: CanvasChat.tsx  CanvasPanel.tsx  ChatPanel.tsx  DiffViewer.tsx  GenerativeDiff.tsx
chatai-ui/src/components/chat/: ChatMessage.tsx  Chatbot.tsx  CodeBlock.tsx  UIMessage.tsx
chatai-ui/src/components/common/: Footer.tsx  Header.tsx  Navbar.tsx
chatai-ui/src/constants/: util.ts
chatai-ui/src/context/: ApiStatusContext.tsx
chatai-ui/src/services/: apiCaller.ts
chatai_api/: main.py  pyproject.toml
chatai_api/api/: __init__.py  chat.py  health.py
chatai_api/core/: config.py  llm.py  models.py  tools.py  vector_store.py
